<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBarWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/lock_module_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBarWrap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/device_info_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="device id: "
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/btn_get_device_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_copy" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <LinearLayout
                android:id="@+id/device_state_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_state"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/device_state_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/device_connect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_connect"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_next" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <Button
                android:id="@+id/btn_unlock"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/unlock"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/door_lock_member"
                style="@style/item_func"
                android:text="@string/door_lock_member" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/ble_unlock_and_lock"
                style="@style/item_func"
                android:text="@string/ble_unlock_and_lock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/lock_record_list"
                style="@style/item_func"
                android:text="@string/lock_logs" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/unlock_mode_management"
                style="@style/item_func"
                android:text="@string/unlock_mode_management"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888"
                android:visibility="gone" />

            <TextView
                android:id="@+id/password_management"
                style="@style/item_func"
                android:text="@string/password_management" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/door_lock_settings"
                style="@style/item_func"
                android:text="@string/lock_remote_set" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/voice_settings"
                style="@style/item_func"
                android:text="@string/voice_set_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/open_dp_demo"
                style="@style/item_func"
                android:text="@string/setting_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#FF888888" />

            <TextView
                android:id="@+id/device_delete"
                style="@style/item_func"
                android:text="@string/device_unbind" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>