<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBarWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/lock_logs" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleBarWrap"
        android:orientation="vertical">

        <com.tuya.lock.demo.ble.view.FlowRadioGroup
            android:id="@+id/records_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/all_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:text="@string/lock_logs_all" />

            <RadioButton
                android:id="@+id/unlock_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/lock_logs_unlock" />

            <RadioButton
                android:id="@+id/close_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/lock_logs_close" />

            <RadioButton
                android:id="@+id/alarm_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/lock_logs_alarm" />

            <RadioButton
                android:id="@+id/operation_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_logs_operation" />

        </com.tuya.lock.demo.ble.view.FlowRadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/unlock_records_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>