<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBarWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/unlock_mode_app" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleBarWrap"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/zigbee_password_name" />


        <LinearLayout
            android:id="@+id/password_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/password_value"
                android:inputType="number" />

            <Button
                android:id="@+id/random_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_randomly" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hijack_wrap"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password_special"
                android:textSize="18dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/hijack_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <TextView
            android:id="@+id/add_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#008800"
            android:gravity="center"
            android:minHeight="46dp"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/unlock_mode_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/submit_add" />

        <Button
            android:id="@+id/show_code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interface_response"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>