<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBarWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/password_list" />

    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/list_type_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBarWrap"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/list_type_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:text="@string/lock_logs_all" />

        <RadioButton
            android:id="@+id/list_type_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/device_online" />

        <RadioButton
            android:id="@+id/list_type_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/device_offline" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/password_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/list_type_main" />

</RelativeLayout>