<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBarWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/ble_unlock_and_lock" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleBarWrap"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/records_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <RadioButton
                android:id="@+id/unlock_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/unlock_records" />

            <RadioButton
                android:id="@+id/alarm_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_records" />

            <RadioButton
                android:id="@+id/hijack_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hijack_records" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/unlock_records_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>